	0.3.1.
	* configure.ac: Require CVL >= 0.2.5.
	* gnulib/alloca.h: Remove generated file from SVN.
	* build-aux/glew.m4, build-aux/cvl.m4, configure.ac, src/Makefile.am:
	Improve detection and usage of external libraries.
	* build-aux/depcomp, build-aux/Makefile.am, build-aux/config.guess, 
	build-aux/config.sub, build-aux/ltmain.sh, build-aux/install-sh,
	configure.ac: Use libtool to get linking right.

2008-07-04  Martin Lambers <marlam@marlam.de>

	* src/cvlview.cpp, src/dataset_selector.h: Show progress bar when
	saving a video, and allow to cancel the operation.
	* src/dataset_selector.h, src/dataset_selector.cpp: Add scan button to
	scan through the file and find out how many data sets it has.

2008-07-03  Martin Lambers <marlam@marlam.de>

	* src/dataset_selector.h, src/dataset_selector.cpp, src/cvlview.cpp:
	Add a SpinBox that allows to jump to specific data sets.
	* src/dataset_selector.cpp: Fix.
	* src/frame_info.h, src/frame_info.cpp, src/dataset_selector.h,
	src/dataset_selector.cpp, src/cvlview.cpp, src/cvlview.qrc,
	src/Makefile.am: Move data set display from frame info to data set
	selector. Remove prev/next buttons because the SpinBox can do the
	same.
	* src/range_selector.cpp: Improve heuristics for default upper/lower
	bounds.
	* src/cvlview.cpp: Use the current view by default for the Save and
	Copy actions.
	* src/cvlview.h, src/cvlview.cpp, src/dataset_selector.h: Add the
	capability to save videos to multi-frame PPM files.
	* NEWS: Update.

2008-07-02  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Clear the color buffer on initialization and on
	certain errors.
	* TODO: Update.

2008-07-01  Martin Lambers <marlam@marlam.de>

	* gllib/glvm.h: Add cbrt() functions.
	* gllib/glvm-color.h: Add CIE L*a*b* color space.
	* gllib/glvm.h: Small improvements and a bugfix.

2008-06-30  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Normalize rotation quaternion to guarantee that
	it represents a rotation.