@@ -1,2 +1,2 @@
-noinst_LIBRARIES = libgl.a
-libgl_a_SOURCES = glvm.h glvm-gl.h glvm-color.h arcball.h arcball.cpp
+noinst_LTLIBRARIES = libgl.la
+libgl_la_SOURCES = glvm.h glvm-gl.h glvm-color.h arcball.h arcball.cpp
