@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=build-aux --no-libtool --macro-prefix=gl fseeko ftello getopt havelib strndup vasprintf
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --aux-dir=build-aux --libtool --macro-prefix=gl fseeko ftello getopt havelib strndup vasprintf
 
 AUTOMAKE_OPTIONS = 1.5 gnits
 
@@ -27,12 +27,13 @@ MAINTAINERCLEANFILES =
 
 AM_CPPFLAGS =
 
-noinst_LIBRARIES += libgnu.a
+noinst_LTLIBRARIES += libgnu.la
 
-libgnu_a_SOURCES =
-libgnu_a_LIBADD = $(gl_LIBOBJS)
-libgnu_a_DEPENDENCIES = $(gl_LIBOBJS)
-EXTRA_libgnu_a_SOURCES =
+libgnu_la_SOURCES =
+libgnu_la_LIBADD = $(gl_LTLIBOBJS)
+libgnu_la_DEPENDENCIES = $(gl_LTLIBOBJS)
+EXTRA_libgnu_la_SOURCES =
+libgnu_la_LDFLAGS = $(AM_LDFLAGS)
 
 ## begin gnulib module alloca-opt
 
@@ -76,7 +77,7 @@ EXTRA_DIST += float.in.h
 
 EXTRA_DIST += fseeko.c stdio-impl.h
 
-EXTRA_libgnu_a_SOURCES += fseeko.c
+EXTRA_libgnu_la_SOURCES += fseeko.c
 
 ## end   gnulib module fseeko
 
@@ -85,7 +86,7 @@ EXTRA_libgnu_a_SOURCES += fseeko.c
 
 EXTRA_DIST += ftello.c
 
-EXTRA_libgnu_a_SOURCES += ftello.c
+EXTRA_libgnu_la_SOURCES += ftello.c
 
 ## end   gnulib module ftello
 
@@ -104,13 +105,13 @@ MOSTLYCLEANFILES += getopt.h getopt.h-t
 
 EXTRA_DIST += getopt.c getopt.in.h getopt1.c getopt_int.h
 
-EXTRA_libgnu_a_SOURCES += getopt.c getopt1.c
+EXTRA_libgnu_la_SOURCES += getopt.c getopt1.c
 
 ## end   gnulib module getopt
 
 ## begin gnulib module gettext-h
 
-libgnu_a_SOURCES += gettext.h
+libgnu_la_SOURCES += gettext.h
 
 ## end   gnulib module gettext-h
 
@@ -134,13 +135,13 @@ EXTRA_DIST += $(top_srcdir)/build-aux/link-warning.h
 
 EXTRA_DIST += lseek.c
 
-EXTRA_libgnu_a_SOURCES += lseek.c
+EXTRA_libgnu_la_SOURCES += lseek.c
 
 ## end   gnulib module lseek
 
 ## begin gnulib module size_max
 
-libgnu_a_SOURCES += size_max.h
+libgnu_la_SOURCES += size_max.h
 
 ## end   gnulib module size_max
 
@@ -328,7 +329,7 @@ EXTRA_DIST += string.in.h
 
 EXTRA_DIST += strndup.c
 
-EXTRA_libgnu_a_SOURCES += strndup.c
+EXTRA_libgnu_la_SOURCES += strndup.c
 
 ## end   gnulib module strndup
 
@@ -337,7 +338,7 @@ EXTRA_libgnu_a_SOURCES += strndup.c
 
 EXTRA_DIST += strnlen.c
 
-EXTRA_libgnu_a_SOURCES += strnlen.c
+EXTRA_libgnu_la_SOURCES += strnlen.c
 
 ## end   gnulib module strnlen
 
@@ -394,7 +395,7 @@ EXTRA_DIST += unistd.in.h
 
 EXTRA_DIST += asnprintf.c float+.h printf-args.c printf-args.h printf-parse.c printf-parse.h vasnprintf.c vasnprintf.h
 
-EXTRA_libgnu_a_SOURCES += asnprintf.c printf-args.c printf-parse.c vasnprintf.c
+EXTRA_libgnu_la_SOURCES += asnprintf.c printf-args.c printf-parse.c vasnprintf.c
 
 ## end   gnulib module vasnprintf
 
@@ -403,7 +404,7 @@ EXTRA_libgnu_a_SOURCES += asnprintf.c printf-args.c printf-parse.c vasnprintf.c
 
 EXTRA_DIST += asprintf.c vasprintf.c
 
-EXTRA_libgnu_a_SOURCES += asprintf.c vasprintf.c
+EXTRA_libgnu_la_SOURCES += asprintf.c vasprintf.c
 
 ## end   gnulib module vasprintf
 
@@ -434,13 +435,13 @@ EXTRA_DIST += wchar.in.h
 
 ## begin gnulib module xsize
 
-libgnu_a_SOURCES += xsize.h
+libgnu_la_SOURCES += xsize.h
 
 ## end   gnulib module xsize
 
 ## begin gnulib module dummy
 
-libgnu_a_SOURCES += dummy.c
+libgnu_la_SOURCES += dummy.c
 
 ## end   gnulib module dummy
 
